@@ -567,3 +567,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20071129 libspectrum.c: check new_filename before checking *new_filename.
 20071130 dll.c: fix typo and remove executable property (Stuart).
 20071130 libspectrum.c: free *new_filename instead of new_filename (Stuart).
+20071130 plusd.c: enable DISCiPLE/+D snapshot support and add support for 128K
+	 DISCiPLE/+D snapshots (feature request #1764996) (Stuart).
